<resources>
    <string name="app_name">Pregna</string>
    <string name="pregna_for_gestational_hypertension">Pregna for Gestational Hypertension</string>
    <string name="help">Help?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_strong_password">Enter strong password (min length 4)</string>
    <string name="login_success">Login success!</string>
    <string name="add">Add</string>
    <string name="dashboard">Dashboard</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="date_27_jan_2020">27 JAN 2020</string>
    <string name="date_26_jan_2020">26 JAN 2020</string>
    <string name="bp_value_140_20">140/20</string>
    <string name="bp_value_140_80">140/80</string>
    <string name="bp_mmhg">mmHg</string>
    <string name="urine_albumin">Urine Albumin</string>
    <string name="no">No</string>
    <string name="dfmc">DFMC</string>
    <string name="_80">80</string>
    <string name="ps">ps</string>
    <string name="educational_content">Educational Content</string>
    <string name="education">Education</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="view_all">View all</string>
    <string name="home_pregnancy_test_do_s_amp_don_ts"><![CDATA[Home Pregnancy Test : Do\'s & Don\'ts]]></string>
    <string name="read_more"><![CDATA[Read More ->]]></string>
    <string name="meditation_session">Meditation Session</string>
    <string name="meadow_relaxation_audio">Meadow Relaxation Audio</string>
    <string name="_09_30_am">09:30 AM</string>
    <string name="_09_30_pm">09:30 PM</string>
    <string name="systolic">Systolic</string>
    <string name="_140">140</string>
    <string name="diastolic">Diastolic</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="_72">72</string>
    <string name="details">Details</string>
</resources>