<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorSecondary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36sdp"
        android:text="@string/blood_pressure"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_12ssp"
        android:textAlignment="center"
        tools:text="Blood\nPressure" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:textColor="@color/main_title_txt"
            android:text="@string/date_27_jan_2020"
            android:textSize="@dimen/_10ssp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:textColor="@color/main_title_txt"
            android:text="@string/bp_value_140_20"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/_4sdp"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:textColor="@color/textGrey"
            android:text="@string/bp_mmhg"
            android:textSize="@dimen/_12ssp"/>

    </LinearLayout>

</LinearLayout>