<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.bp.detail.BpDetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_27_jan_2020"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:textColor="@color/main_title_txt"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:textAlignment="center"
                android:drawablePadding="@dimen/_8sdp"
                app:drawableStartCompat="@drawable/ic_calendar" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                app:cardCornerRadius="@dimen/_15sdp"
                app:cardElevation="@dimen/_1sdp"
                app:strokeColor="@color/textGrey"
                app:strokeWidth="0.3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:padding="@dimen/_8sdp">

                        <TextView
                            android:id="@+id/value_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/main_title_txt"
                            android:text="@string/bp_value_140_20"
                            android:textSize="@dimen/_14ssp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <TextView
                            android:id="@+id/unit_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:textColor="@color/textGrey"
                            android:text="@string/bp_mmhg"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/value_start"/>

                        <TextView
                            android:id="@+id/time_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:drawablePadding="@dimen/_8sdp"
                            app:drawableStartCompat="@drawable/ic_clock"
                            android:layout_marginHorizontal="@dimen/_4sdp"
                            android:textColor="@color/main_title_txt"
                            android:text="@string/_09_30_am"
                            android:textSize="@dimen/_14ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:layout_marginVertical="@dimen/_4sdp"
                        android:background="@color/textGrey"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_8sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/main_title_txt"
                            android:text="@string/_140"
                            android:textSize="@dimen/_14ssp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:layout_marginHorizontal="@dimen/_4sdp"
                            android:textColor="@color/main_title_txt"
                            android:text="@string/systolic"
                            android:textSize="@dimen/_14ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:layout_marginVertical="@dimen/_4sdp"
                        android:background="@color/textGrey"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_8sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/main_title_txt"
                            android:text="@string/_80"
                            android:textSize="@dimen/_14ssp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:layout_marginHorizontal="@dimen/_4sdp"
                            android:textColor="@color/main_title_txt"
                            android:text="@string/diastolic"
                            android:textSize="@dimen/_14ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:layout_marginVertical="@dimen/_4sdp"
                        android:background="@color/textGrey"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_8sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/main_title_txt"
                            android:text="@string/_72"
                            android:textSize="@dimen/_14ssp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:layout_marginHorizontal="@dimen/_4sdp"
                            android:textColor="@color/main_title_txt"
                            android:text="@string/heart_rate"
                            android:textSize="@dimen/_14ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>